# Retitle

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.bat
retitle/: cli.py  formatter.py  gui.py  music.py  parser.py  renamer.py  subtitles.py
retitle/api/: musicbrainz.py  opensubtitles.py  tmdb.py  tvmaze.py
tests/: test_formatter.py  test_music.py  test_opensubtitles.py  test_parser.py  test_renamer.py  test_subtitles.py
